data list displayed
But image didn't show. Firebase connection partially done

--- a/Census/app/src/main/res/layout/activity_add_data.xml
+++ b/Census/app/src/main/res/layout/activity_add_data.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:foregroundTint="#000000"
-    tools:context=".addDataActivity">
+    tools:context=".addDataActivity"
+    android:id="@+id/addData">
 
     <ImageView
         android:id="@+id/imageView6"
