--- a/Census/app/src/main/res/layout/activity_list_data.xml
+++ b/Census/app/src/main/res/layout/activity_list_data.xml
@@ -12,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:dividerHeight="2dp"
+        android:textColor="#000000"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -21,10 +22,9 @@
         android:id="@+id/uploadFirebase"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="666dp"
+        android:layout_marginStart="300dp"
+        android:layout_marginTop="720dp"
         android:text="Upload "
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
