--- a/Census/app/src/main/res/layout/activity_main.xml
+++ b/Census/app/src/main/res/layout/activity_main.xml
@@ -38,6 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="13dp"
         android:text="I H L Ilukpitiya"
+        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -49,6 +50,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
         android:text="(D/BCS/21/0004)"
+        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
