--- a/Census/app/src/main/res/layout/activity_add_data.xml
+++ b/Census/app/src/main/res/layout/activity_add_data.xml
@@ -26,6 +26,7 @@
         android:layout_width="300dp"
         android:layout_height="45dp"
         android:ems="10"
+        android:textColor="#000000"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -39,6 +40,7 @@
         android:layout_marginTop="224dp"
         android:text="Enter Name"
         android:textAlignment="center"
+        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.51"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,6 +52,7 @@
         android:layout_height="45dp"
         android:ems="10"
         android:inputType="number"
+        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -61,6 +64,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Enter Age"
+        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -72,6 +76,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="11dp"
         android:text="Select Your Gender"
+        android:textColor="#000000"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -90,6 +95,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="Take a photo"
+        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -109,6 +115,7 @@
         android:drawableTop="@drawable/camera4"
         android:gravity="left|center_vertical"
         android:text="Camera"
+        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -167,6 +174,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:checked="false"
+            android:textColor="#000000"
             android:text="Male"
             android:textSize="15dp" />
 
@@ -176,6 +184,7 @@
             android:layout_height="33dp"
             android:layout_gravity="center"
             android:layout_weight="0.13"
+            android:textColor="#000000"
             android:checked="false"
             android:text="Female"
             android:textSize="15dp" />
